# agentic-token-bench

./: .gitignore  CLAUDE.md  LICENSE  README.md  Taskfile.yml  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: submit-tool.yml
.github/workflows/: ci.yml  pages.yml  tokenmax-ci.yml  tokenmax-publish.yml
agents/: base.py
agents/claude/: adapter.py  parser.py  probe.py
docs/: conventions.md  findings.md  human-review-rules.md  integration-guide.md  methodology.md  qualification-appendix.md  qualification-report-shape.md  redesign.md  release-gates.md  reproduction.md  scorecard-shape.md  spec.md  task-authoring-guide.md  tokenmax-install-spec.md  wrapper-manifest-spec.md
schemas/: event.schema.json  qualification.schema.json  run.schema.json  task.schema.json  task.v2.schema.json
scripts/: generate_fixture_runs.py  generate_scorecards.py  run_pilot.py  run_qualification.py  validate_cassandra_ast_grep_01.py  validate_cassandra_ast_grep_02.py  validate_cassandra_comby_01.py  validate_cassandra_comby_02.py  validate_cassandra_fastmod_01.py  validate_cassandra_fastmod_02.py  validate_cassandra_qmd_01.py  validate_cassandra_qmd_02.py  validate_cassandra_ripgrep_01.py  validate_cassandra_ripgrep_02.py  validate_cassandra_rtk_01.py  validate_cassandra_rtk_02.py  validate_cassandra_v2_ast_grep.py  validate_cassandra_v2_comby.py  validate_cassandra_v2_fastmod.py  validate_cassandra_v2_qmd.py  validate_cassandra_v2_ripgrep.py  validate_cassandra_v2_rtk.py
tests/: test_agent_base.py  test_artifacts.py  test_ast_grep_wrapper.py  test_benchmark_overview.py  test_claude_adapter.py  test_codex_adapter.py  test_comby_wrapper.py  test_duckdb_aggregation.py  test_export_data.py  test_fastmod_wrapper.py  test_gemini_adapter.py  test_html_report.py  test_invocation_trace.py  test_layered_reporting.py  test_layered_runner.py  test_official_runs.py  test_pilot_pipeline.py  test_prompts.py  test_qmd_wrapper.py  test_qualification.py  test_qualification_integration.py  test_real_results.py  test_reporting.py  test_ripgrep_wrapper.py  test_rtk_wrapper.py  test_runner.py  test_runner_progress.py  test_scorecard_models.py  test_step_executor.py  test_task_validation_scripts.py  test_tool_base.py  test_tool_manifest.py  test_tracing.py  test_validation.py  test_workspace.py
tools/: base.py
(+218 files in other folders)
