[project]
name = "agentic-token-bench"
version = "0.1.0"
description = "Benchmark and plugin framework for measuring token-saving tools in agentic coding"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "typer>=0.15",
    "pydantic>=2.0",
    "duckdb>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
atb = "benchmarks.harness.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "jsonschema>=4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["smoke: smoke tests for CI"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmarks", "agents", "tools"]
